Bug 135949 - Filesave: Image jump to different page after saving as DOCX and reopen in LO (OK in MSO)
Summary: Filesave: Image jump to different page after saving as DOCX and reopen in LO ...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.4.0.3 release
Hardware: All All
: medium normal
Assignee: Justin L
URL:
Whiteboard: target:7.1.0
Keywords: bibisected, bisected, filter:docx
Depends on:
Blocks:
 
Reported: 2020-08-20 15:23 UTC by Telesto
Modified: 2020-09-07 15:56 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Example file (219.03 KB, application/vnd.oasis.opendocument.text)
2020-08-20 15:23 UTC, Telesto
Details
Example compared LO 7.1+ MSO when saved as DOCX (130.27 KB, image/png)
2020-09-04 11:46 UTC, Timur
Details
Example compared LO 7.1+ MSO when saved as DOC (124.38 KB, image/png)
2020-09-04 13:00 UTC, Timur
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Telesto 2020-08-20 15:23:03 UTC
Description:
Image jump to different page after saving as DOCX (even crossing a page break)

Steps to Reproduce:
1. Open the attached file
2. Save as DOCX
3. File reload

Actual Results:
Image on second page

Expected Results:
First page


Reproducible: Always


User Profile Reset: No



Additional Info:
Found in
7.1

and in
4.4.7.2

fine in (it think, second page is disappearing)
Version: 4.3.0.4
Build ID: 62ad5818884a2fc2e5780dd45466868d41009ec0
Comment 1 Telesto 2020-08-20 15:23:33 UTC
Created attachment 164498 [details]
Example file
Comment 2 Timur 2020-09-04 11:46:56 UTC
Created attachment 165143 [details]
Example compared LO 7.1+ MSO  when saved as DOCX

Confirmed if reopen in LO, OK in MSO.
Comment 3 Timur 2020-09-04 12:29:53 UTC
In LO 4.3 max, 2nd page was added to open in MSO, LO still used to open 1 page. 

In LO 4.4 max, 2nd page was added to open in LO, so image was on 2nd page. 
This bibisect is:  17972dcd73482ba1cccbb3119ee3d9aa710da0f1 is the first *changed* commit
Date:   Sat Mar 14 23:57:41 2015 +0800
source-hash-b4ccde72b8e2e45e7276d5b08b182495a1b1a617
Previous  source-hash-e8193627922ee328d17250ec518ecd4ba342c97d
    
    commit b4ccde72b8e2e45e7276d5b08b182495a1b1a617
    Author:     Luke Deller <luke@deller.id.au>
    AuthorDate: Sat Jul 12 21:49:50 2014 +1000
    Commit:     Luboš Luňák <l.lunak@collabora.com>
    CommitDate: Mon Jul 28 13:01:08 2014 +0200
    
        Copy first-header-footer test from ww8 to ooxml
        The test document was converted from doc to docx using MS Word 2010.
        Several fixes were required to make this test pass: ....
    
I'm not sure that Luke is active anymore. 
I call this "change" and not "regression", unless explained.
Comment 4 Telesto 2020-09-04 12:45:10 UTC
@Justin
Needs some dev insights.. I think. And is Luke Deller still active?
Comment 5 Timur 2020-09-04 13:00:56 UTC
Created attachment 165147 [details]
Example compared LO 7.1+ MSO when saved as DOC
Comment 6 Justin L 2020-09-04 16:22:13 UTC
Proposed fix at https://gerrit.libreoffice.org/c/core/+/102060
Comment 7 Justin L 2020-09-05 05:41:54 UTC
(In reply to Telesto from comment #4)
>  And is Luke Deller still active?

https://cgit.freedesktop.org/libreoffice/core/log/&qt=author&q=luke+deller
Comment 8 Commit Notification 2020-09-07 15:41:42 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/23b26103b3f79e578261fab7f11372c857c7de5e

tdf#135949 writerfilter: don't bRemove if anchoredObjects

It will be available in 7.1.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.