tdf#135949 writerfilter: don't bRemove if anchoredObjects

Surprised it took so long to find an example of an
anchored object on the empty paragraph.

I considered making a more useful function,
but I didn't want to return a pointer,
and my skills and understanding aren't good enough
to intelligently return an empty vector reference,
so I just left it as I first created it.

It seems a bit silly to make a bool function
just for this, but nothing returns anything
that I wanted to use. So I just made a
perfect-fit function for my unique need here.

I would have preferred to create a potentially
re-useable and flexible function...

Change-Id: I8c2527403cd8059223d4bc610b10243656b1db3c
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/102060
Tested-by: Jenkins
Reviewed-by: Justin Luth <justin_luth@sil.org>
Reviewed-by: Miklos Vajna <vmiklos@collabora.com>